--- a/src/components/ArticleCarousel/ArticleCarousel.css
+++ b/src/components/ArticleCarousel/ArticleCarousel.css
@@ -52,8 +52,9 @@
   transition: transform 0.5s ease-in-out;
   --carousel-gap: 20px; 
   gap: var(--carousel-gap);
-  transition: transform 0.5s ease-in-out; 
-  padding-bottom: 10px; 
+  transition: transform 0.5s ease-in-out;
+  padding-bottom: 10px;
+  align-items: flex-end; /* Align items to the bottom */
 }
 
 .article-carousel-item {
@@ -65,7 +66,8 @@
 
 .article-carousel-item .article-card {
   width: 100%;
-  height: 100%; 
+  height: 100%;
+  margin-left: -10px;
 }
 
 
