--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* Basic CSS Reset */
+
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +13,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.6;
   color: #333;
-  background-color: #f8f9fa; /* Light background for the body */
+  background-color: #fff;
+  
+  user-select: none;
+  -webkit-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
 }
 
 code {
@@ -22,17 +27,17 @@ code {
 }
 
 a {
-  color: inherit; /* Blue links are annoying */
-  text-decoration: none; /* No underlines by default */
+  color: inherit; 
+  text-decoration: none; 
 }
 
 img {
   max-width: 100%;
   height: auto;
-  display: block; /* Remove bottom space under images */
+  display: block;
 }
 
-/* Basic container */
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
